# incubator-resilientdb

./: .asf.yaml  .bazelignore  .bazelrc  .bazelversion  .clang-format  .dockerignore  .env  .env.example  .gitignore  .gitmodules  .licenserc.yaml  .secrets  BUILD.bazel  CHANGELOG.md  CHANGELOG_8md.html  CHANGES.md  CNAME  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  Cargo.toml  Changelog_8md.html  Counter.json  DISCLAIMER  DISCLAIMER-WIP  DISCLAIMER.txt  DOCKER_RESLENS_SETUP.md  Dockerfile  FINAL_PHASES_AND_STEPS.md  Gemfile  INSTALL.sh  INSTALLATION.md  INSTALL_DEPENDENCIES.md  INSTALL_MAC.sh  INSTRUCTIONS.md  LICENCE  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  (+1807 more)
.github/: deploy-ecosystem-configs.json  deploy-ecosystem-configs.yml  pull_request_template.md
Docker/: Dockerfile  Dockerfile_mac
INSTALL/: README.md
MCP_mod/: README.md  res-mcp.py
ResLens/: .dockerignore  Dockerfile  package.json
ResLens-Middleware/: README.md
apache_release/: pack.sh
api/: BUILD  README.md  WORKSPACE  ip_address.config  kv_operation.py  learner-test.py  pybind_kv_service.cpp
app/: _meta.ts  global.css  layout.tsx  page.module.css  page.tsx  providers.tsx  sitemap.ts
bazel-out/: stable-status.txt  volatile-status.txt
benchmarks/: ycsb.h  ycsb_query.cpp  ycsb_query.h  ycsb_txn.cpp  ycsb_wl.cpp
blockchain/: chain.cpp  chain.h  crypto.h
client/: BUILD  client_main.cpp  client_query.cpp  client_query.h  client_txn.cpp  client_txn.h  consumer_client.cpp  mock_resdb_client.h  mock_resdb_txn_client.h  resdb_client.cpp  resdb_client.h  resdb_client_test.cpp  resdb_state_client.cpp  resdb_state_client.h  resdb_state_client_test.cpp  resdb_txn_client.cpp  resdb_txn_client.h  resdb_txn_client_test.cpp  resdb_user_client.cpp  resdb_user_client.h  resdb_user_client_test.cpp
common/: BUILD
components/: AskAIModal.tsx  AuthProviders.tsx  CommentSection.tsx  ConfigGenerator.tsx  FloatingAssistant.tsx  GitHubAuth.tsx  InstallationForm.tsx  MongoQueryBuilder.tsx  PocketFlowChatbot.tsx  PythonIDE.tsx  PythonPlayground.tsx  ResContractPlayground.tsx  TypeScriptPlayground.tsx  craft.tsx  index.ts
config/: BUILD  resdb_config.cpp  resdb_config.h  resdb_config_test.cpp  resdb_config_utils.cpp  resdb_config_utils.h  resdb_poc_config.cpp  resdb_poc_config.h
content/: _meta.ts  about.mdx  index.mdx  installation.mdx  node_cache.mdx  python_cache.mdx  pythonsdk.mdx  release-notes.mdx  rescli.mdx  rescontract.mdx  resdb_orm.mdx  resdborm.mdx  reslens.mdx  resvault.mdx
controllers/: explorer.js  nodeExporter.js  processExporter.js  pyroscope.js  statsExporter.js  transactions.js
crypto/: BUILD  hash.cpp  hash_test.cpp  key_generator.cpp  key_generator.h  mock_signature_verifier.h  signature_utils.cpp  signature_verifier.cpp  signature_verifier.h  signature_verifier_test.cpp
dashboard/: .gitignore  Readme.md  nginx-site.conf
data_structures/: hash_map.h  hash_set.h  ring_all_comb.h  shared_int.h
database/: BUILD  schema.sql  txn_memory_db.cpp  txn_memory_db.h  txn_memory_db_test.cpp
db/: database.h  in_memory_db.cpp  sqlite.cpp
deploy/: README.md
dev/: .rat-excludes  check-license
docker/: DockerfileForMac  Makefile  collect_metrics.sh  docker-compose.yml  run_benchmark.sh  start_cluster.sh
docs/: DB_SETUP.md  README.md  SYSTEM_ARCHITECTURE.md  blog.md  resilientdb-schema.md
doxygen/: Doxyfile
durable_layer/: BUILD  README.md  leveldb_durable.cpp  leveldb_durable.h  leveldb_durable_test.cpp  rocksdb_durable.cpp  rocksdb_durable.h  rocksdb_durable_test.cpp
ecosystem/: README.md
ecosystem/ai-tools/mcp/ResInsight/: .dockerignore  .gitignore  Dockerfile  README.md  ResInsightBlog.md  ResilientDBKnowledgeBase.py  add_license_headers.py  knowledge_graph_builder.py  pyproject.toml  requirements.txt  server.py
ecosystem/cache/resilient-python-cache/: .gitignore  README.md  pyproject.toml
ecosystem/cache/resilient-python-cache/.github/workflows/: main.yml
ecosystem/cache/resilient-python-cache/resilient_python_cache/: __init__.py  cache.py  config.py  exceptions.py
ecosystem/sdk/rust-sdk/: .asf.yaml  .gitignore  Cargo.toml  README.md
ecosystem/sdk/rust-sdk/.github/workflows/: license.yml  rust.yml
ecosystem/sdk/rust-sdk/src/: blocks.rs  crypto.rs  lib.rs  resdb.rs  transaction.rs
ecosystem/sdk/rust-sdk/test/: Cargo.toml
ecosystem/sdk/rust-sdk/test/src/: main.rs  models.rs
enclave/: .gitignore  BUILD  Makefile  README.md  client.cpp  key.pem  key.txt  sgx_cpp_args.h  sgx_cpp_u.c  sgx_cpp_u.h
enclave/sgxcode/enclave/: CMakeLists.txt  Makefile  sgx_cpp.edl
enclave/sgxcode/enclave/accumulator_src/: accumulator.cpp
enclave/sgxcode/enclave/checker_src/: checker.cpp
enclave/sgxcode/enclave/common/: dispatcher.cpp  dispatcher.h  ecalls.cpp
enclave/sgxcode/enclave/decryptor_src/: decryptor copy.cpp  decryptor.cpp
enclave/sgxcode/enclave/random_src/: random.cpp
enclave/sgxcode/enclave/simulated_counter_src/: simulated_counter.cpp
enclave/sgxcode/host/: CMakeLists.txt  Makefile  host.cpp
example/: BUILD  kv_config.config  kv_server.config  kv_server_tools.cpp  start_crow_service.sh  start_kv_server.sh  start_kv_server_with_dashboard.sh
execution/: BUILD  geo_global_executor.cpp  geo_global_executor.h  geo_global_executor_test.cpp  geo_transaction_executor.cpp  geo_transaction_executor.h  geo_transaction_executor_test.cpp  mock_geo_global_executor.h  mock_transaction_executor_impl.h  system_info.cpp  system_info.h  system_info_test.cpp  transaction_executor.cpp  transaction_executor.h  transaction_executor_impl.cpp  transaction_executor_impl.h  transaction_executor_test.cpp
graphql-service/: .gitignore  INSTALL.sh  docker-compose.yml  entrypoint.sh  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
test/: BUILD  Cargo.toml  resdb_test.cpp  server.test.js
test/proto/: BUILD
test/protobuf/: BUILD  Makefile  address.pb.cc  address.pb.h  address.proto  address2.proto  encode_file  test_decode.cpp  test_encode  test_encode.cpp
test/src/: main.rs  models.rs
test/test_data/: BUILD
testsdk/: Cargo.toml
testsdk/src/: main.rs  models.rs
(+9202 files in other folders)
