[package]
name = "resilientdb_rust_sdk"
version = "0.1.1"
edition = "2021"
authors = ["Dhruv Sangamwar <dsangamwar@gmail.com>"]
description = "A SDK for interacting with ResilientDB"
license = "Apache-2.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
file = "1.1.2"
read = "0.1.1"
futures = "0.3"
futures-util = "0.3"
futures-macro = "0.3"signature = "2.2.0"
rand = "0.8.5"
pkcs8 = "0.10.2"
openssl = "0.10"
sha3 = "0.9.0"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
hex = "0.4"
