[tool.poetry]
name = "resilient-python-cache"
version = "0.1.0"
description = "Python library for syncing ResilientDB data via WebSocket and HTTP with seamless reconnection."
authors = ["Apratim Shukla <apratimshukla6@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ResilientEcosystem/resilient-python-cache"
repository = "https://github.com/ResilientEcosystem/resilient-python-cache"
keywords = ["websocket", "mongodb", "sync", "reconnection", "resilientdb"]

packages = [
    { include = "resilient_python_cache" }
]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.5.1"
websockets = "^10.3"
httpx = "^0.24.0"
pyee = "^9.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"