[package]
name = "testsdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resdb_rust_sdk = {path = "/Users/dhruv/Desktop/Repositories/resdb/resdb_rust_sdk"}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"