#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
#

[tool.poetry]
name = "resilient-python-cache"
version = "0.1.1"
description = "Python library for syncing ResilientDB data via WebSocket and HTTP with seamless reconnection."
authors = ["Apratim Shukla <apratimshukla6@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ResilientEcosystem/resilient-python-cache"
repository = "https://github.com/ResilientEcosystem/resilient-python-cache"
keywords = ["websocket", "mongodb", "sync", "reconnection", "resilientdb"]
readme = "README.md"

packages = [
    { include = "resilient_python_cache" }
]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.5.1"
websockets = "^10.3"
httpx = "^0.24.0"
pyee = "^9.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"