# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resilientdb_rust_sdk"
version = "0.1.2"
edition = "2021"
description = "A SDK for interacting with ResilientDB"
license = "Apache-2.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
file = "1.1.2"
futures = "0.3"
futures-util = "0.3"
futures-macro = "0.3"
signature = "2.2.0"
pkcs8 = "0.10.2"
openssl = "0.10"
sha3 = "0.9.0"
ed25519-dalek = "1.0.1"
rand_chacha = "0.3.1"
hex = "0.4"
bs58 = "0.5.0"
rand = "0.7"
rand_core = "0.6.4"
